# procrastiMate.io

./: LICENSE  README.md  pyproject.toml  rules.md
procrastimate/: cli.py
procrastimate.egg-info/: PKG-INFO  SOURCES.txt
