[project]
name = "procrastimate"
version = "0.1.0"
description = "A CLI tool for professional procrastination"
requires-python = ">=3.9"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "typer"
]
readme = "README.md"
readme-content-type = "text/markdown"

[project.scripts]
procrastimate = "procrastimate.cli:main"
